--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "author": "",
+  "author": "Andrew Wallace",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
